--- a/S5NCORE_EFSALES.API/S5NCORE_EFSALES.API.csproj
+++ b/S5NCORE_EFSALES.API/S5NCORE_EFSALES.API.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\S5NCORE_EFSALES.INFRASTRUCTURE\S5NCORE_EFSALES.INFRASTRUCTURE.csproj" />
+  </ItemGroup>
+
 </Project>
