--- a/S5NCORE_EFSALES.API/appsettings.json
+++ b/S5NCORE_EFSALES.API/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevConnection": "Server=DESKTOP-S1DROK0\\SQLEXPRESS;Database=SalesDB;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
+  "Authentication": {
+    "SecretKey": "ASDASDMSDFN32324SDSFSFSDF",
+    "Issuer": "http://localhost:24487",
+    "Audience": "http://localhost:24487"
+
   }
 }
